parser.out
Created by PLY version 3.7 (http://www.dabeaz.com/ply)

Unused terminals:

    WORD

Grammar

Rule 0     S' -> assign
Rule 1     assign -> NAME EQUALS expression
Rule 2     assign -> statement
Rule 3     statement -> expression
Rule 4     statement -> BREAK
Rule 5     statement -> EXIT
Rule 6     statement -> QUIT
Rule 7     expression -> SUM expression expression
Rule 8     expression -> DIFFERENCE expression expression
Rule 9     expression -> PRODUCT expression expression
Rule 10    expression -> QUOTIENT expression expression
Rule 11    expression -> expression PLUS expression
Rule 12    expression -> expression MINUS expression
Rule 13    expression -> expression TIMES expression
Rule 14    expression -> expression DIVIDE expression
Rule 15    expression -> expression OR expression
Rule 16    expression -> expression AND expression
Rule 17    expression -> expression XOR expression
Rule 18    expression -> INT
Rule 19    expression -> FLOAT
Rule 20    expression -> OPAR expression CPAR
Rule 21    expression -> NOT expression
Rule 22    expression -> expression FACTORIAL
Rule 23    expression -> FACTORIAL expression
Rule 24    expression -> LOG expression
Rule 25    expression -> LN expression
Rule 26    expression -> PI
Rule 27    expression -> NAME
Rule 28    expression -> MINUS expression
Rule 29    expression -> expression SQUARE
Rule 30    expression -> SQUARE expression
Rule 31    expression -> SQROOT expression
Rule 32    expression -> function1
Rule 33    expression -> POWER OPAR expression expression CPAR
Rule 34    function1 -> SIN expression
Rule 35    function1 -> COS expression
Rule 36    function1 -> TAN expression
Rule 37    function1 -> COT expression
Rule 38    function1 -> SEC expression
Rule 39    function1 -> COSEC expression
Rule 40    function1 -> COS expression RAD
Rule 41    function1 -> TAN expression RAD
Rule 42    function1 -> COT expression RAD
Rule 43    function1 -> SEC expression RAD
Rule 44    function1 -> COSEC expression RAD
Rule 45    function1 -> SIN expression RAD
Rule 46    function1 -> SIN expression DEGREE
Rule 47    function1 -> COS expression DEGREE
Rule 48    function1 -> TAN expression DEGREE
Rule 49    function1 -> COT expression DEGREE
Rule 50    function1 -> SEC expression DEGREE
Rule 51    function1 -> COSEC expression DEGREE
Rule 52    expression -> REGISTERS

Terminals, with rules where they appear

AND                  : 16
BREAK                : 4
COS                  : 35 40 47
COSEC                : 39 44 51
COT                  : 37 42 49
CPAR                 : 20 33
DEGREE               : 46 47 48 49 50 51
DIFFERENCE           : 8
DIVIDE               : 14
EQUALS               : 1
EXIT                 : 5
FACTORIAL            : 22 23
FLOAT                : 19
INT                  : 18
LN                   : 25
LOG                  : 24
MINUS                : 12 28
NAME                 : 1 27
NOT                  : 21
OPAR                 : 20 33
OR                   : 15
PI                   : 26
PLUS                 : 11
POWER                : 33
PRODUCT              : 9
QUIT                 : 6
QUOTIENT             : 10
RAD                  : 40 41 42 43 44 45
REGISTERS            : 52
SEC                  : 38 43 50
SIN                  : 34 45 46
SQROOT               : 31
SQUARE               : 29 30
SUM                  : 7
TAN                  : 36 41 48
TIMES                : 13
WORD                 : 
XOR                  : 17
error                : 

Nonterminals, with rules where they appear

assign               : 0
expression           : 1 3 7 7 8 8 9 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 20 21 22 23 24 25 28 29 30 31 33 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51
function1            : 32
statement            : 2

Parsing method: LALR

state 0

    (0) S' -> . assign
    (1) assign -> . NAME EQUALS expression
    (2) assign -> . statement
    (3) statement -> . expression
    (4) statement -> . BREAK
    (5) statement -> . EXIT
    (6) statement -> . QUIT
    (7) expression -> . SUM expression expression
    (8) expression -> . DIFFERENCE expression expression
    (9) expression -> . PRODUCT expression expression
    (10) expression -> . QUOTIENT expression expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression XOR expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . OPAR expression CPAR
    (21) expression -> . NOT expression
    (22) expression -> . expression FACTORIAL
    (23) expression -> . FACTORIAL expression
    (24) expression -> . LOG expression
    (25) expression -> . LN expression
    (26) expression -> . PI
    (27) expression -> . NAME
    (28) expression -> . MINUS expression
    (29) expression -> . expression SQUARE
    (30) expression -> . SQUARE expression
    (31) expression -> . SQROOT expression
    (32) expression -> . function1
    (33) expression -> . POWER OPAR expression expression CPAR
    (52) expression -> . REGISTERS
    (34) function1 -> . SIN expression
    (35) function1 -> . COS expression
    (36) function1 -> . TAN expression
    (37) function1 -> . COT expression
    (38) function1 -> . SEC expression
    (39) function1 -> . COSEC expression
    (40) function1 -> . COS expression RAD
    (41) function1 -> . TAN expression RAD
    (42) function1 -> . COT expression RAD
    (43) function1 -> . SEC expression RAD
    (44) function1 -> . COSEC expression RAD
    (45) function1 -> . SIN expression RAD
    (46) function1 -> . SIN expression DEGREE
    (47) function1 -> . COS expression DEGREE
    (48) function1 -> . TAN expression DEGREE
    (49) function1 -> . COT expression DEGREE
    (50) function1 -> . SEC expression DEGREE
    (51) function1 -> . COSEC expression DEGREE

    NAME            shift and go to state 21
    BREAK           shift and go to state 25
    EXIT            shift and go to state 28
    QUIT            shift and go to state 19
    SUM             shift and go to state 3
    DIFFERENCE      shift and go to state 18
    PRODUCT         shift and go to state 20
    QUOTIENT        shift and go to state 13
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    OPAR            shift and go to state 9
    NOT             shift and go to state 30
    FACTORIAL       shift and go to state 26
    LOG             shift and go to state 2
    LN              shift and go to state 7
    PI              shift and go to state 12
    MINUS           shift and go to state 4
    SQUARE          shift and go to state 15
    SQROOT          shift and go to state 16
    POWER           shift and go to state 6
    REGISTERS       shift and go to state 27
    SIN             shift and go to state 8
    COS             shift and go to state 1
    TAN             shift and go to state 11
    COT             shift and go to state 5
    SEC             shift and go to state 29
    COSEC           shift and go to state 17

    function1                      shift and go to state 14
    expression                     shift and go to state 31
    assign                         shift and go to state 24
    statement                      shift and go to state 10

state 1

    (35) function1 -> COS . expression
    (40) function1 -> COS . expression RAD
    (47) function1 -> COS . expression DEGREE
    (7) expression -> . SUM expression expression
    (8) expression -> . DIFFERENCE expression expression
    (9) expression -> . PRODUCT expression expression
    (10) expression -> . QUOTIENT expression expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression XOR expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . OPAR expression CPAR
    (21) expression -> . NOT expression
    (22) expression -> . expression FACTORIAL
    (23) expression -> . FACTORIAL expression
    (24) expression -> . LOG expression
    (25) expression -> . LN expression
    (26) expression -> . PI
    (27) expression -> . NAME
    (28) expression -> . MINUS expression
    (29) expression -> . expression SQUARE
    (30) expression -> . SQUARE expression
    (31) expression -> . SQROOT expression
    (32) expression -> . function1
    (33) expression -> . POWER OPAR expression expression CPAR
    (52) expression -> . REGISTERS
    (34) function1 -> . SIN expression
    (35) function1 -> . COS expression
    (36) function1 -> . TAN expression
    (37) function1 -> . COT expression
    (38) function1 -> . SEC expression
    (39) function1 -> . COSEC expression
    (40) function1 -> . COS expression RAD
    (41) function1 -> . TAN expression RAD
    (42) function1 -> . COT expression RAD
    (43) function1 -> . SEC expression RAD
    (44) function1 -> . COSEC expression RAD
    (45) function1 -> . SIN expression RAD
    (46) function1 -> . SIN expression DEGREE
    (47) function1 -> . COS expression DEGREE
    (48) function1 -> . TAN expression DEGREE
    (49) function1 -> . COT expression DEGREE
    (50) function1 -> . SEC expression DEGREE
    (51) function1 -> . COSEC expression DEGREE

    SUM             shift and go to state 3
    DIFFERENCE      shift and go to state 18
    PRODUCT         shift and go to state 20
    QUOTIENT        shift and go to state 13
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    OPAR            shift and go to state 9
    NOT             shift and go to state 30
    FACTORIAL       shift and go to state 26
    LOG             shift and go to state 2
    LN              shift and go to state 7
    PI              shift and go to state 12
    NAME            shift and go to state 32
    MINUS           shift and go to state 4
    SQUARE          shift and go to state 15
    SQROOT          shift and go to state 16
    POWER           shift and go to state 6
    REGISTERS       shift and go to state 27
    SIN             shift and go to state 8
    COS             shift and go to state 1
    TAN             shift and go to state 11
    COT             shift and go to state 5
    SEC             shift and go to state 29
    COSEC           shift and go to state 17

    function1                      shift and go to state 14
    expression                     shift and go to state 33

state 2

    (24) expression -> LOG . expression
    (7) expression -> . SUM expression expression
    (8) expression -> . DIFFERENCE expression expression
    (9) expression -> . PRODUCT expression expression
    (10) expression -> . QUOTIENT expression expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression XOR expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . OPAR expression CPAR
    (21) expression -> . NOT expression
    (22) expression -> . expression FACTORIAL
    (23) expression -> . FACTORIAL expression
    (24) expression -> . LOG expression
    (25) expression -> . LN expression
    (26) expression -> . PI
    (27) expression -> . NAME
    (28) expression -> . MINUS expression
    (29) expression -> . expression SQUARE
    (30) expression -> . SQUARE expression
    (31) expression -> . SQROOT expression
    (32) expression -> . function1
    (33) expression -> . POWER OPAR expression expression CPAR
    (52) expression -> . REGISTERS
    (34) function1 -> . SIN expression
    (35) function1 -> . COS expression
    (36) function1 -> . TAN expression
    (37) function1 -> . COT expression
    (38) function1 -> . SEC expression
    (39) function1 -> . COSEC expression
    (40) function1 -> . COS expression RAD
    (41) function1 -> . TAN expression RAD
    (42) function1 -> . COT expression RAD
    (43) function1 -> . SEC expression RAD
    (44) function1 -> . COSEC expression RAD
    (45) function1 -> . SIN expression RAD
    (46) function1 -> . SIN expression DEGREE
    (47) function1 -> . COS expression DEGREE
    (48) function1 -> . TAN expression DEGREE
    (49) function1 -> . COT expression DEGREE
    (50) function1 -> . SEC expression DEGREE
    (51) function1 -> . COSEC expression DEGREE

    SUM             shift and go to state 3
    DIFFERENCE      shift and go to state 18
    PRODUCT         shift and go to state 20
    QUOTIENT        shift and go to state 13
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    OPAR            shift and go to state 9
    NOT             shift and go to state 30
    FACTORIAL       shift and go to state 26
    LOG             shift and go to state 2
    LN              shift and go to state 7
    PI              shift and go to state 12
    NAME            shift and go to state 32
    MINUS           shift and go to state 4
    SQUARE          shift and go to state 15
    SQROOT          shift and go to state 16
    POWER           shift and go to state 6
    REGISTERS       shift and go to state 27
    SIN             shift and go to state 8
    COS             shift and go to state 1
    TAN             shift and go to state 11
    COT             shift and go to state 5
    SEC             shift and go to state 29
    COSEC           shift and go to state 17

    function1                      shift and go to state 14
    expression                     shift and go to state 34

state 3

    (7) expression -> SUM . expression expression
    (7) expression -> . SUM expression expression
    (8) expression -> . DIFFERENCE expression expression
    (9) expression -> . PRODUCT expression expression
    (10) expression -> . QUOTIENT expression expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression XOR expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . OPAR expression CPAR
    (21) expression -> . NOT expression
    (22) expression -> . expression FACTORIAL
    (23) expression -> . FACTORIAL expression
    (24) expression -> . LOG expression
    (25) expression -> . LN expression
    (26) expression -> . PI
    (27) expression -> . NAME
    (28) expression -> . MINUS expression
    (29) expression -> . expression SQUARE
    (30) expression -> . SQUARE expression
    (31) expression -> . SQROOT expression
    (32) expression -> . function1
    (33) expression -> . POWER OPAR expression expression CPAR
    (52) expression -> . REGISTERS
    (34) function1 -> . SIN expression
    (35) function1 -> . COS expression
    (36) function1 -> . TAN expression
    (37) function1 -> . COT expression
    (38) function1 -> . SEC expression
    (39) function1 -> . COSEC expression
    (40) function1 -> . COS expression RAD
    (41) function1 -> . TAN expression RAD
    (42) function1 -> . COT expression RAD
    (43) function1 -> . SEC expression RAD
    (44) function1 -> . COSEC expression RAD
    (45) function1 -> . SIN expression RAD
    (46) function1 -> . SIN expression DEGREE
    (47) function1 -> . COS expression DEGREE
    (48) function1 -> . TAN expression DEGREE
    (49) function1 -> . COT expression DEGREE
    (50) function1 -> . SEC expression DEGREE
    (51) function1 -> . COSEC expression DEGREE

    SUM             shift and go to state 3
    DIFFERENCE      shift and go to state 18
    PRODUCT         shift and go to state 20
    QUOTIENT        shift and go to state 13
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    OPAR            shift and go to state 9
    NOT             shift and go to state 30
    FACTORIAL       shift and go to state 26
    LOG             shift and go to state 2
    LN              shift and go to state 7
    PI              shift and go to state 12
    NAME            shift and go to state 32
    MINUS           shift and go to state 4
    SQUARE          shift and go to state 15
    SQROOT          shift and go to state 16
    POWER           shift and go to state 6
    REGISTERS       shift and go to state 27
    SIN             shift and go to state 8
    COS             shift and go to state 1
    TAN             shift and go to state 11
    COT             shift and go to state 5
    SEC             shift and go to state 29
    COSEC           shift and go to state 17

    function1                      shift and go to state 14
    expression                     shift and go to state 35

state 4

    (28) expression -> MINUS . expression
    (7) expression -> . SUM expression expression
    (8) expression -> . DIFFERENCE expression expression
    (9) expression -> . PRODUCT expression expression
    (10) expression -> . QUOTIENT expression expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression XOR expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . OPAR expression CPAR
    (21) expression -> . NOT expression
    (22) expression -> . expression FACTORIAL
    (23) expression -> . FACTORIAL expression
    (24) expression -> . LOG expression
    (25) expression -> . LN expression
    (26) expression -> . PI
    (27) expression -> . NAME
    (28) expression -> . MINUS expression
    (29) expression -> . expression SQUARE
    (30) expression -> . SQUARE expression
    (31) expression -> . SQROOT expression
    (32) expression -> . function1
    (33) expression -> . POWER OPAR expression expression CPAR
    (52) expression -> . REGISTERS
    (34) function1 -> . SIN expression
    (35) function1 -> . COS expression
    (36) function1 -> . TAN expression
    (37) function1 -> . COT expression
    (38) function1 -> . SEC expression
    (39) function1 -> . COSEC expression
    (40) function1 -> . COS expression RAD
    (41) function1 -> . TAN expression RAD
    (42) function1 -> . COT expression RAD
    (43) function1 -> . SEC expression RAD
    (44) function1 -> . COSEC expression RAD
    (45) function1 -> . SIN expression RAD
    (46) function1 -> . SIN expression DEGREE
    (47) function1 -> . COS expression DEGREE
    (48) function1 -> . TAN expression DEGREE
    (49) function1 -> . COT expression DEGREE
    (50) function1 -> . SEC expression DEGREE
    (51) function1 -> . COSEC expression DEGREE

    SUM             shift and go to state 3
    DIFFERENCE      shift and go to state 18
    PRODUCT         shift and go to state 20
    QUOTIENT        shift and go to state 13
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    OPAR            shift and go to state 9
    NOT             shift and go to state 30
    FACTORIAL       shift and go to state 26
    LOG             shift and go to state 2
    LN              shift and go to state 7
    PI              shift and go to state 12
    NAME            shift and go to state 32
    MINUS           shift and go to state 4
    SQUARE          shift and go to state 15
    SQROOT          shift and go to state 16
    POWER           shift and go to state 6
    REGISTERS       shift and go to state 27
    SIN             shift and go to state 8
    COS             shift and go to state 1
    TAN             shift and go to state 11
    COT             shift and go to state 5
    SEC             shift and go to state 29
    COSEC           shift and go to state 17

    function1                      shift and go to state 14
    expression                     shift and go to state 36

state 5

    (37) function1 -> COT . expression
    (42) function1 -> COT . expression RAD
    (49) function1 -> COT . expression DEGREE
    (7) expression -> . SUM expression expression
    (8) expression -> . DIFFERENCE expression expression
    (9) expression -> . PRODUCT expression expression
    (10) expression -> . QUOTIENT expression expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression XOR expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . OPAR expression CPAR
    (21) expression -> . NOT expression
    (22) expression -> . expression FACTORIAL
    (23) expression -> . FACTORIAL expression
    (24) expression -> . LOG expression
    (25) expression -> . LN expression
    (26) expression -> . PI
    (27) expression -> . NAME
    (28) expression -> . MINUS expression
    (29) expression -> . expression SQUARE
    (30) expression -> . SQUARE expression
    (31) expression -> . SQROOT expression
    (32) expression -> . function1
    (33) expression -> . POWER OPAR expression expression CPAR
    (52) expression -> . REGISTERS
    (34) function1 -> . SIN expression
    (35) function1 -> . COS expression
    (36) function1 -> . TAN expression
    (37) function1 -> . COT expression
    (38) function1 -> . SEC expression
    (39) function1 -> . COSEC expression
    (40) function1 -> . COS expression RAD
    (41) function1 -> . TAN expression RAD
    (42) function1 -> . COT expression RAD
    (43) function1 -> . SEC expression RAD
    (44) function1 -> . COSEC expression RAD
    (45) function1 -> . SIN expression RAD
    (46) function1 -> . SIN expression DEGREE
    (47) function1 -> . COS expression DEGREE
    (48) function1 -> . TAN expression DEGREE
    (49) function1 -> . COT expression DEGREE
    (50) function1 -> . SEC expression DEGREE
    (51) function1 -> . COSEC expression DEGREE

    SUM             shift and go to state 3
    DIFFERENCE      shift and go to state 18
    PRODUCT         shift and go to state 20
    QUOTIENT        shift and go to state 13
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    OPAR            shift and go to state 9
    NOT             shift and go to state 30
    FACTORIAL       shift and go to state 26
    LOG             shift and go to state 2
    LN              shift and go to state 7
    PI              shift and go to state 12
    NAME            shift and go to state 32
    MINUS           shift and go to state 4
    SQUARE          shift and go to state 15
    SQROOT          shift and go to state 16
    POWER           shift and go to state 6
    REGISTERS       shift and go to state 27
    SIN             shift and go to state 8
    COS             shift and go to state 1
    TAN             shift and go to state 11
    COT             shift and go to state 5
    SEC             shift and go to state 29
    COSEC           shift and go to state 17

    function1                      shift and go to state 14
    expression                     shift and go to state 37

state 6

    (33) expression -> POWER . OPAR expression expression CPAR

    OPAR            shift and go to state 38


state 7

    (25) expression -> LN . expression
    (7) expression -> . SUM expression expression
    (8) expression -> . DIFFERENCE expression expression
    (9) expression -> . PRODUCT expression expression
    (10) expression -> . QUOTIENT expression expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression XOR expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . OPAR expression CPAR
    (21) expression -> . NOT expression
    (22) expression -> . expression FACTORIAL
    (23) expression -> . FACTORIAL expression
    (24) expression -> . LOG expression
    (25) expression -> . LN expression
    (26) expression -> . PI
    (27) expression -> . NAME
    (28) expression -> . MINUS expression
    (29) expression -> . expression SQUARE
    (30) expression -> . SQUARE expression
    (31) expression -> . SQROOT expression
    (32) expression -> . function1
    (33) expression -> . POWER OPAR expression expression CPAR
    (52) expression -> . REGISTERS
    (34) function1 -> . SIN expression
    (35) function1 -> . COS expression
    (36) function1 -> . TAN expression
    (37) function1 -> . COT expression
    (38) function1 -> . SEC expression
    (39) function1 -> . COSEC expression
    (40) function1 -> . COS expression RAD
    (41) function1 -> . TAN expression RAD
    (42) function1 -> . COT expression RAD
    (43) function1 -> . SEC expression RAD
    (44) function1 -> . COSEC expression RAD
    (45) function1 -> . SIN expression RAD
    (46) function1 -> . SIN expression DEGREE
    (47) function1 -> . COS expression DEGREE
    (48) function1 -> . TAN expression DEGREE
    (49) function1 -> . COT expression DEGREE
    (50) function1 -> . SEC expression DEGREE
    (51) function1 -> . COSEC expression DEGREE

    SUM             shift and go to state 3
    DIFFERENCE      shift and go to state 18
    PRODUCT         shift and go to state 20
    QUOTIENT        shift and go to state 13
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    OPAR            shift and go to state 9
    NOT             shift and go to state 30
    FACTORIAL       shift and go to state 26
    LOG             shift and go to state 2
    LN              shift and go to state 7
    PI              shift and go to state 12
    NAME            shift and go to state 32
    MINUS           shift and go to state 4
    SQUARE          shift and go to state 15
    SQROOT          shift and go to state 16
    POWER           shift and go to state 6
    REGISTERS       shift and go to state 27
    SIN             shift and go to state 8
    COS             shift and go to state 1
    TAN             shift and go to state 11
    COT             shift and go to state 5
    SEC             shift and go to state 29
    COSEC           shift and go to state 17

    function1                      shift and go to state 14
    expression                     shift and go to state 39

state 8

    (34) function1 -> SIN . expression
    (45) function1 -> SIN . expression RAD
    (46) function1 -> SIN . expression DEGREE
    (7) expression -> . SUM expression expression
    (8) expression -> . DIFFERENCE expression expression
    (9) expression -> . PRODUCT expression expression
    (10) expression -> . QUOTIENT expression expression
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (15) expression -> . expression OR expression
    (16) expression -> . expression AND expression
    (17) expression -> . expression XOR expression
    (18) expression -> . INT
    (19) expression -> . FLOAT
    (20) expression -> . OPAR expression CPAR
    (21) expression -> . NOT expression
    (22) expression -> . expression FACTORIAL
    (23) expression -> . FACTORIAL expression
    (24) expression -> . LOG expression
    (25) expression -> . LN expression
    (26) expression -> . PI
    (27) expression -> . NAME
    (28) expression -> . MINUS expression
    (29) expression -> . expression SQUARE
    (30) expression -> . SQUARE expression
    (31) expression -> . SQROOT expression
    (32) expression -> . function1
    (33) expression -> . POWER OPAR expression expression CPAR
    (52) expression -> . REGISTERS
    (34) function1 -> . SIN expression
    (35) function1 -> . COS expression
    (36) function1 -> . TAN expression
    (37) function1 -> . COT expression
    (38) function1 -> . SEC expression
    (39) function1 -> . COSEC expression
    (40) function1 -> . COS expression RAD
    (41) function1 -> . TAN expression RAD
    (42) function1 -> . COT expression RAD
    (43) function1 -> . SEC expression RAD
    (44) function1 -> . COSEC expression RAD
    (45) function1 -> . SIN expression RAD
    (46) function1 -> . SIN expression DEGREE
    (47) function1 -> . COS expression DEGREE
    (48) function1 -> . TAN expression DEGREE
    (49) function1 -> . COT expression DEGREE
    (50) function1 -> . SEC expression DEGREE
    (51) function1 -> . COSEC expression DEGREE

    SUM             shift and go to state 3
    DIFFERENCE      shift and go to state 18
    PRODUCT         shift and go to state 20
    QUOTIENT        shift and go to state 13
    INT             shift and go to state 22
    FLOAT           shift and go to state 23
    OPAR            shift and go to state 9
    NOT             shift and go to state 30
    FACTORIAL       shift and go to state 26
    LOG             shift and go to state 2
    LN              shift and go to state 7
    PI              shift and go to state 12
    NAME            shift and go to state 32
    MINUS           shift and go to state 4
    SQUARE          shift and go to state 15
    SQROOT          shift and go to state 16
    POWER           shift and go to state 6
    REGISTERS       shift and go to state 27
    SIN             shift and go to state 8
    COS             shift and go to state 1
    TAN             shift and go to state 11
    COT             shift and go to state 5
    SEC             shift and go to state 29
    COSEC           shift and go to state 17
